@startuml
  ' State Machine
  class StateMachine {
    +UUID id
    +String name
    +String description
    +Boolean isActive
    +List<Status> statuses
    +List<Transition> transitions
  }

  ' Status
  class Status {
    +UUID id
    +StateMachine stateMachine
    +String name
    +Boolean isInitial
  }

  ' Transition
  class Transition {
    +UUID id
    +StateMachine stateMachine
    +Status sourceStatus
    +Status targetStatus
  }

  ' Event
  class Event {
    +UUID id
    +StateMachine stateMachine
    +Status status
  }

  ' StateFlow
  class EventFlow {
    +UUID id
    +Event event
    +LocalDateTime createdAt
    +List<EventFlow> getAll(UUID eventId)
  }

' Relações
StateMachine "1" -- "0..*" Status : statuses
StateMachine "1" -- "0..*" Transition : transitions
Status "0..*" -- "0..*" Transition : source/target
StateMachine "1" -- "0..*" Event : events
Event "1" -- "0..*" EventFlow : flows
@enduml
